Include new module for packages that have moved from one module to another

--- a/src/main/resources/java-versions.html
+++ b/src/main/resources/java-versions.html
@@ -55,6 +55,8 @@
                     <a class="btn btn-link" th:href="${linkGenerator.generateLink(pagePackage)}" rel="external">
                       [[${pagePackage.name}]]
                     </a>
+                    <span th:if="${pagePackage.movedToNewModule}">(moved to
+                      <a class="btn-link" th:href="${linkGenerator.generateNewModuleLink(pagePackage)}" rel="external">[[${pagePackage.newModuleName}]]</a>)</span>
                   </div>
                   <th:block th:if="${pagePackage.hasContent()}">
                   <div class="panel-heading"
