If a package moved to another module, link to the new module

--- a/removed.html
+++ b/removed.html
@@ -285,6 +285,8 @@
                     <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.transaction.xa/javax/transaction/xa/package-summary.html" rel="external">
                       javax.transaction.xa
                     </a>
+                    <span>(moved to
+                      <a class="btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.transaction.xa/module-summary.html" rel="external">java.transaction.xa</a>)</span>
                   </div>
                 </div>
               </div>
