--- a/removed.html
+++ b/removed.html
@@ -28,6 +28,116 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-14-panel">
+      <div class="panel-heading" id="java-14-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14-content" aria-controls="java-14-content">
+          Java 14
+        </a>
+      </div>
+      <div class="collapse" id="java-14-content" aria-labelledby="java-14-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-14_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-14_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14_java-base-content" aria-controls="java-14_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-14_java-base-content" aria-labelledby="java-14_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-14_java-base_java-security-acl-panel" data-filter-value="java.security.acl">
+                  <div class="panel-heading" id="java-14_java-base_java-security-acl-header">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.base/java/security/acl/package-summary.html" rel="external">
+                      java.security.acl
+                    </a>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-14_java-base_java-util-jar-panel" data-filter-value="java.util.jar">
+                  <div class="panel-heading" id="java-14_java-base_java-util-jar-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14_java-base_java-util-jar-content" aria-controls="java-14_java-base_java-util-jar-content">
+                      java.util.jar
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-14_java-base_java-util-jar-content" aria-labelledby="java-14_java-base_java-util-jar-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-14_java-base_java-util-jar-Pack200-panel" data-filter-value="java.util.jar.Pack200">
+                        <div class="panel-heading" id="java-14_java-base_java-util-jar-Pack200-header">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.base/java/util/jar/Pack200.html" rel="external">
+                            Pack200
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-14_java-base_java-util-jar-Pack200-Packer-panel" data-filter-value="java.util.jar.Pack200.Packer">
+                        <div class="panel-heading" id="java-14_java-base_java-util-jar-Pack200-Packer-header">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.base/java/util/jar/Pack200.Packer.html" rel="external">
+                            Pack200.Packer
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-14_java-base_java-util-jar-Pack200-Unpacker-panel" data-filter-value="java.util.jar.Pack200.Unpacker">
+                        <div class="panel-heading" id="java-14_java-base_java-util-jar-Pack200-Unpacker-header">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.base/java/util/jar/Pack200.Unpacker.html" rel="external">
+                            Pack200.Unpacker
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-14_jdk-jsobject-panel" data-filter-value="jdk.jsobject">
+            <div class="panel-heading" id="java-14_jdk-jsobject-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14_jdk-jsobject-content" aria-controls="java-14_jdk-jsobject-content">
+                jdk.jsobject
+              </a>
+            </div>
+            <div class="collapse" id="java-14_jdk-jsobject-content" aria-labelledby="java-14_jdk-jsobject-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-14_jdk-jsobject_netscape-javascript-panel" data-filter-value="netscape.javascript">
+                  <div class="panel-heading" id="java-14_jdk-jsobject_netscape-javascript-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14_jdk-jsobject_netscape-javascript-content" aria-controls="java-14_jdk-jsobject_netscape-javascript-content">
+                      netscape.javascript
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-14_jdk-jsobject_netscape-javascript-content" aria-labelledby="java-14_jdk-jsobject_netscape-javascript-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-14_jdk-jsobject_netscape-javascript-JSObject-panel" data-filter-value="netscape.javascript.JSObject">
+                        <div class="panel-heading" id="java-14_jdk-jsobject_netscape-javascript-JSObject-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14_jdk-jsobject_netscape-javascript-JSObject-content" aria-controls="java-14_jdk-jsobject_netscape-javascript-JSObject-content">
+                            JSObject
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-14_jdk-jsobject_netscape-javascript-JSObject-content" aria-labelledby="java-14_jdk-jsobject_netscape-javascript-JSObject-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/jdk.jsobject/netscape/javascript/JSObject.html#getWindow(java.applet.Applet)" rel="external">
+                                    getWindow(java.applet.Applet)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-14_jdk-pack-panel" data-filter-value="jdk.pack">
+            <div class="panel-heading" id="java-14_jdk-pack-header">
+              <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/jdk.pack/module-summary.html" rel="external">
+                jdk.pack
+              </a>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-13-panel">
       <div class="panel-heading" id="java-13-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13-content" aria-controls="java-13-content">
@@ -282,11 +392,11 @@
               <div class="panel-body">
                 <div class="panel panel-default java-package" id="java-11_java-sql_javax-transaction-xa-panel" data-filter-value="javax.transaction.xa">
                   <div class="panel-heading" id="java-11_java-sql_javax-transaction-xa-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.transaction.xa/javax/transaction/xa/package-summary.html" rel="external">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/java.transaction.xa/javax/transaction/xa/package-summary.html" rel="external">
                       javax.transaction.xa
                     </a>
                     <span>(moved to
-                      <a class="btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.transaction.xa/module-summary.html" rel="external">java.transaction.xa</a>)</span>
+                      <a class="btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/java.transaction.xa/module-summary.html" rel="external">java.transaction.xa</a>)</span>
                   </div>
                 </div>
               </div>
