Updated with Java 15

--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/14/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/15/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,144 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-15-panel">
+      <div class="panel-heading" id="java-15-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-15-content" aria-controls="java-15-content">
+          Java 15
+        </a>
+      </div>
+      <div class="collapse" id="java-15-content" aria-labelledby="java-15-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-15_java-rmi-panel" data-filter-value="java.rmi">
+            <div class="panel-heading" id="java-15_java-rmi-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-15_java-rmi-content" aria-controls="java-15_java-rmi-content">
+                java.rmi
+              </a>
+            </div>
+            <div class="collapse" id="java-15_java-rmi-content" aria-labelledby="java-15_java-rmi-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-15_java-rmi_java-rmi-activation-panel" data-filter-value="java.rmi.activation">
+                  <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-15_java-rmi_java-rmi-activation-content" aria-controls="java-15_java-rmi_java-rmi-activation-content">
+                      java.rmi.activation
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-15_java-rmi_java-rmi-activation-content" aria-labelledby="java-15_java-rmi_java-rmi-activation-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-Activatable-panel" data-filter-value="java.rmi.activation.Activatable">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-Activatable-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/Activatable.html" rel="external">
+                            Activatable
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivateFailedException-panel" data-filter-value="java.rmi.activation.ActivateFailedException">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivateFailedException-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivateFailedException.html" rel="external">
+                            ActivateFailedException
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationDesc-panel" data-filter-value="java.rmi.activation.ActivationDesc">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationDesc-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationDesc.html" rel="external">
+                            ActivationDesc
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationException-panel" data-filter-value="java.rmi.activation.ActivationException">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationException-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationException.html" rel="external">
+                            ActivationException
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationGroup-panel" data-filter-value="java.rmi.activation.ActivationGroup">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationGroup-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationGroup.html" rel="external">
+                            ActivationGroup
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationGroupDesc-panel" data-filter-value="java.rmi.activation.ActivationGroupDesc">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationGroupDesc-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationGroupDesc.html" rel="external">
+                            ActivationGroupDesc
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationGroupID-panel" data-filter-value="java.rmi.activation.ActivationGroupID">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationGroupID-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationGroupID.html" rel="external">
+                            ActivationGroupID
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationGroup_Stub-panel" data-filter-value="java.rmi.activation.ActivationGroup_Stub">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationGroup_Stub-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationGroup_Stub.html" rel="external">
+                            ActivationGroup_Stub
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationID-panel" data-filter-value="java.rmi.activation.ActivationID">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationID-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationID.html" rel="external">
+                            ActivationID
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationInstantiator-panel" data-filter-value="java.rmi.activation.ActivationInstantiator">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationInstantiator-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationInstantiator.html" rel="external">
+                            ActivationInstantiator
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationMonitor-panel" data-filter-value="java.rmi.activation.ActivationMonitor">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationMonitor-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationMonitor.html" rel="external">
+                            ActivationMonitor
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-ActivationSystem-panel" data-filter-value="java.rmi.activation.ActivationSystem">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-ActivationSystem-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/ActivationSystem.html" rel="external">
+                            ActivationSystem
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-Activator-panel" data-filter-value="java.rmi.activation.Activator">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-Activator-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/Activator.html" rel="external">
+                            Activator
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-UnknownGroupException-panel" data-filter-value="java.rmi.activation.UnknownGroupException">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-UnknownGroupException-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/UnknownGroupException.html" rel="external">
+                            UnknownGroupException
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-15_java-rmi_java-rmi-activation-UnknownObjectException-panel" data-filter-value="java.rmi.activation.UnknownObjectException">
+                        <div class="panel-heading" id="java-15_java-rmi_java-rmi-activation-UnknownObjectException-header">
+                          <a class="btn btn-link" href="java.rmi/java/rmi/activation/UnknownObjectException.html" rel="external">
+                            UnknownObjectException
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-14-panel">
       <div class="panel-heading" id="java-14-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-14-content" aria-controls="java-14-content">
@@ -63,7 +201,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.base/java/lang/invoke/ConstantBootstraps.html#&lt;init&gt;()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/java.base/java/lang/invoke/ConstantBootstraps.html#&lt;init&gt;()" rel="external">
                                     ConstantBootstraps()
                                   </a>
                                 </div>
@@ -114,7 +252,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.base/java/lang/reflect/Modifier.html#&lt;init&gt;()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/java.base/java/lang/reflect/Modifier.html#&lt;init&gt;()" rel="external">
                                     Modifier()
                                   </a>
                                 </div>
@@ -264,7 +402,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="jdk.net/jdk/net/ExtendedSocketOptions.html#SO_FLOW_SLA" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/jdk.net/jdk/net/ExtendedSocketOptions.html#SO_FLOW_SLA" rel="external">
                                     SO_FLOW_SLA
                                   </a>
                                 </div>
@@ -275,14 +413,14 @@
                       </div>
                       <div class="panel panel-default java-class" id="java-14_jdk-net_jdk-net-SocketFlow-panel" data-filter-value="jdk.net.SocketFlow">
                         <div class="panel-heading" id="java-14_jdk-net_jdk-net-SocketFlow-header">
-                          <a class="btn btn-link" href="jdk.net/jdk/net/SocketFlow.html" rel="external">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/jdk.net/jdk/net/SocketFlow.html" rel="external">
                             SocketFlow
                           </a>
                         </div>
                       </div>
                       <div class="panel panel-default java-class" id="java-14_jdk-net_jdk-net-SocketFlow-Status-panel" data-filter-value="jdk.net.SocketFlow.Status">
                         <div class="panel-heading" id="java-14_jdk-net_jdk-net-SocketFlow-Status-header">
-                          <a class="btn btn-link" href="jdk.net/jdk/net/SocketFlow.Status.html" rel="external">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/jdk.net/jdk/net/SocketFlow.Status.html" rel="external">
                             SocketFlow.Status
                           </a>
                         </div>
@@ -1196,7 +1334,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="jdk.scripting.nashorn/jdk/nashorn/api/scripting/ScriptObjectMirror.html#toNumber()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/jdk.scripting.nashorn/jdk/nashorn/api/scripting/ScriptObjectMirror.html#toNumber()" rel="external">
                                     toNumber()
                                   </a>
                                 </div>
@@ -1351,7 +1489,7 @@
             </div>
           <div class="panel panel-default java-module" id="java-11_jdk-scripting-nashorn-panel" data-filter-value="jdk.scripting.nashorn">
             <div class="panel-heading" id="java-11_jdk-scripting-nashorn-header">
-              <a class="btn btn-link" href="jdk.scripting.nashorn/module-summary.html" rel="external">
+              <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/jdk.scripting.nashorn/module-summary.html" rel="external">
                 jdk.scripting.nashorn
               </a>
             </div>
@@ -1506,7 +1644,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIConnectorServer.html#CREDENTIAL_TYPES" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/14/docs/api/java.management.rmi/javax/management/remote/rmi/RMIConnectorServer.html#CREDENTIAL_TYPES" rel="external">
                                     CREDENTIAL_TYPES
                                   </a>
                                 </div>
