--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/17/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/18/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,200 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-18-panel">
+      <div class="panel-heading" id="java-18-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18-content" aria-controls="java-18-content">
+          Java 18
+        </a>
+      </div>
+      <div class="collapse" id="java-18-content" aria-labelledby="java-18-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-18_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-18_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base-content" aria-controls="java-18_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-18_java-base-content" aria-labelledby="java-18_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-18_java-base_java-lang-panel" data-filter-value="java.lang">
+                  <div class="panel-heading" id="java-18_java-base_java-lang-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_java-lang-content" aria-controls="java-18_java-base_java-lang-content">
+                      java.lang
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-18_java-base_java-lang-content" aria-labelledby="java-18_java-base_java-lang-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-18_java-base_java-lang-Enum-panel" data-filter-value="java.lang.Enum">
+                        <div class="panel-heading" id="java-18_java-base_java-lang-Enum-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_java-lang-Enum-content" aria-controls="java-18_java-base_java-lang-Enum-content">
+                            Enum
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-18_java-base_java-lang-Enum-content" aria-labelledby="java-18_java-base_java-lang-Enum-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Enum.html#finalize()" rel="external">
+                                    finalize()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-18_java-base_java-lang-Runtime-panel" data-filter-value="java.lang.Runtime">
+                        <div class="panel-heading" id="java-18_java-base_java-lang-Runtime-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_java-lang-Runtime-content" aria-controls="java-18_java-base_java-lang-Runtime-content">
+                            Runtime
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-18_java-base_java-lang-Runtime-content" aria-labelledby="java-18_java-base_java-lang-Runtime-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#exec(java.lang.String)" rel="external">
+                                    exec(java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#exec(java.lang.String,java.lang.String[])" rel="external">
+                                    exec(java.lang.String,java.lang.String[])
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#exec(java.lang.String,java.lang.String[],java.io.File)" rel="external">
+                                    exec(java.lang.String,java.lang.String[],java.io.File)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#runFinalization()" rel="external">
+                                    runFinalization()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-18_java-base_java-lang-System-panel" data-filter-value="java.lang.System">
+                        <div class="panel-heading" id="java-18_java-base_java-lang-System-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_java-lang-System-content" aria-controls="java-18_java-base_java-lang-System-content">
+                            System
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-18_java-base_java-lang-System-content" aria-labelledby="java-18_java-base_java-lang-System-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/System.html#runFinalization()" rel="external">
+                                    runFinalization()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-18_java-base_javax-security-auth-panel" data-filter-value="javax.security.auth">
+                  <div class="panel-heading" id="java-18_java-base_javax-security-auth-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_javax-security-auth-content" aria-controls="java-18_java-base_javax-security-auth-content">
+                      javax.security.auth
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-18_java-base_javax-security-auth-content" aria-labelledby="java-18_java-base_javax-security-auth-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-18_java-base_javax-security-auth-Subject-panel" data-filter-value="javax.security.auth.Subject">
+                        <div class="panel-heading" id="java-18_java-base_javax-security-auth-Subject-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-base_javax-security-auth-Subject-content" aria-controls="java-18_java-base_javax-security-auth-Subject-content">
+                            Subject
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-18_java-base_javax-security-auth-Subject-content" aria-labelledby="java-18_java-base_javax-security-auth-Subject-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/javax/security/auth/Subject.html#doAs(javax.security.auth.Subject,java.security.PrivilegedAction)" rel="external">
+                                    doAs(javax.security.auth.Subject,java.security.PrivilegedAction)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/javax/security/auth/Subject.html#doAs(javax.security.auth.Subject,java.security.PrivilegedExceptionAction)" rel="external">
+                                    doAs(javax.security.auth.Subject,java.security.PrivilegedExceptionAction)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-18_java-management-panel" data-filter-value="java.management">
+            <div class="panel-heading" id="java-18_java-management-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-management-content" aria-controls="java-18_java-management-content">
+                java.management
+              </a>
+            </div>
+            <div class="collapse" id="java-18_java-management-content" aria-labelledby="java-18_java-management-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-18_java-management_java-lang-management-panel" data-filter-value="java.lang.management">
+                  <div class="panel-heading" id="java-18_java-management_java-lang-management-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-management_java-lang-management-content" aria-controls="java-18_java-management_java-lang-management-content">
+                      java.lang.management
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-18_java-management_java-lang-management-content" aria-labelledby="java-18_java-management_java-lang-management-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-18_java-management_java-lang-management-MemoryMXBean-panel" data-filter-value="java.lang.management.MemoryMXBean">
+                        <div class="panel-heading" id="java-18_java-management_java-lang-management-MemoryMXBean-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18_java-management_java-lang-management-MemoryMXBean-content" aria-controls="java-18_java-management_java-lang-management-MemoryMXBean-content">
+                            MemoryMXBean
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-18_java-management_java-lang-management-MemoryMXBean-content" aria-labelledby="java-18_java-management_java-lang-management-MemoryMXBean-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.management/java/lang/management/MemoryMXBean.html#getObjectPendingFinalizationCount()" rel="external">
+                                    getObjectPendingFinalizationCount()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-17-panel">
       <div class="panel-heading" id="java-17-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-17-content" aria-controls="java-17-content">
@@ -4207,7 +4401,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.desktop/java/awt/color/ICC_Profile.html#finalize()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/17/docs/api/java.desktop/java/awt/color/ICC_Profile.html#finalize()" rel="external">
                                     finalize()
                                   </a>
                                 </div>
@@ -4345,7 +4539,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.desktop/java/awt/image/ColorModel.html#finalize()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/17/docs/api/java.desktop/java/awt/image/ColorModel.html#finalize()" rel="external">
                                     finalize()
                                   </a>
                                 </div>
@@ -4365,7 +4559,7 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.desktop/java/awt/image/IndexColorModel.html#finalize()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/17/docs/api/java.desktop/java/awt/image/IndexColorModel.html#finalize()" rel="external">
                                     finalize()
                                   </a>
                                 </div>
