--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/18/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/19/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,173 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-19-panel">
+      <div class="panel-heading" id="java-19-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19-content" aria-controls="java-19-content">
+          Java 19
+        </a>
+      </div>
+      <div class="collapse" id="java-19-content" aria-labelledby="java-19-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-19_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-19_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base-content" aria-controls="java-19_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-19_java-base-content" aria-labelledby="java-19_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-19_java-base_java-lang-panel" data-filter-value="java.lang">
+                  <div class="panel-heading" id="java-19_java-base_java-lang-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-lang-content" aria-controls="java-19_java-base_java-lang-content">
+                      java.lang
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-19_java-base_java-lang-content" aria-labelledby="java-19_java-base_java-lang-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-19_java-base_java-lang-Thread-panel" data-filter-value="java.lang.Thread">
+                        <div class="panel-heading" id="java-19_java-base_java-lang-Thread-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-lang-Thread-content" aria-controls="java-19_java-base_java-lang-Thread-content">
+                            Thread
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-19_java-base_java-lang-Thread-content" aria-labelledby="java-19_java-base_java-lang-Thread-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/Thread.html#getId()" rel="external">
+                                    getId()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-19_java-base_java-security-spec-panel" data-filter-value="java.security.spec">
+                  <div class="panel-heading" id="java-19_java-base_java-security-spec-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-security-spec-content" aria-controls="java-19_java-base_java-security-spec-content">
+                      java.security.spec
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-19_java-base_java-security-spec-content" aria-labelledby="java-19_java-base_java-security-spec-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-19_java-base_java-security-spec-PSSParameterSpec-panel" data-filter-value="java.security.spec.PSSParameterSpec">
+                        <div class="panel-heading" id="java-19_java-base_java-security-spec-PSSParameterSpec-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-security-spec-PSSParameterSpec-content" aria-controls="java-19_java-base_java-security-spec-PSSParameterSpec-content">
+                            PSSParameterSpec
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-19_java-base_java-security-spec-PSSParameterSpec-content" aria-labelledby="java-19_java-base_java-security-spec-PSSParameterSpec-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/security/spec/PSSParameterSpec.html#&lt;init&gt;(int)" rel="external">
+                                    PSSParameterSpec(int)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/security/spec/PSSParameterSpec.html#DEFAULT" rel="external">
+                                    DEFAULT
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-19_java-base_java-util-panel" data-filter-value="java.util">
+                  <div class="panel-heading" id="java-19_java-base_java-util-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-util-content" aria-controls="java-19_java-base_java-util-content">
+                      java.util
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-19_java-base_java-util-content" aria-labelledby="java-19_java-base_java-util-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-19_java-base_java-util-Locale-panel" data-filter-value="java.util.Locale">
+                        <div class="panel-heading" id="java-19_java-base_java-util-Locale-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_java-util-Locale-content" aria-controls="java-19_java-base_java-util-Locale-content">
+                            Locale
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-19_java-base_java-util-Locale-content" aria-labelledby="java-19_java-base_java-util-Locale-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/util/Locale.html#&lt;init&gt;(java.lang.String)" rel="external">
+                                    Locale(java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/util/Locale.html#&lt;init&gt;(java.lang.String,java.lang.String)" rel="external">
+                                    Locale(java.lang.String,java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/util/Locale.html#&lt;init&gt;(java.lang.String,java.lang.String,java.lang.String)" rel="external">
+                                    Locale(java.lang.String,java.lang.String,java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-19_java-base_javax-crypto-spec-panel" data-filter-value="javax.crypto.spec">
+                  <div class="panel-heading" id="java-19_java-base_javax-crypto-spec-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_javax-crypto-spec-content" aria-controls="java-19_java-base_javax-crypto-spec-content">
+                      javax.crypto.spec
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-19_java-base_javax-crypto-spec-content" aria-labelledby="java-19_java-base_javax-crypto-spec-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-19_java-base_javax-crypto-spec-OAEPParameterSpec-panel" data-filter-value="javax.crypto.spec.OAEPParameterSpec">
+                        <div class="panel-heading" id="java-19_java-base_javax-crypto-spec-OAEPParameterSpec-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19_java-base_javax-crypto-spec-OAEPParameterSpec-content" aria-controls="java-19_java-base_javax-crypto-spec-OAEPParameterSpec-content">
+                            OAEPParameterSpec
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-19_java-base_javax-crypto-spec-OAEPParameterSpec-content" aria-labelledby="java-19_java-base_javax-crypto-spec-OAEPParameterSpec-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/javax/crypto/spec/OAEPParameterSpec.html#DEFAULT" rel="external">
+                                    DEFAULT
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-18-panel">
       <div class="panel-heading" id="java-18-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-18-content" aria-controls="java-18-content">
