Updated with Java 20

--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/19/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/20/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,162 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-20-panel">
+      <div class="panel-heading" id="java-20-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20-content" aria-controls="java-20-content">
+          Java 20
+        </a>
+      </div>
+      <div class="collapse" id="java-20-content" aria-labelledby="java-20-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-20_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-20_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-base-content" aria-controls="java-20_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-20_java-base-content" aria-labelledby="java-20_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-20_java-base_java-lang-panel" data-filter-value="java.lang">
+                  <div class="panel-heading" id="java-20_java-base_java-lang-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-base_java-lang-content" aria-controls="java-20_java-base_java-lang-content">
+                      java.lang
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-20_java-base_java-lang-content" aria-labelledby="java-20_java-base_java-lang-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-20_java-base_java-lang-ThreadDeath-panel" data-filter-value="java.lang.ThreadDeath">
+                        <div class="panel-heading" id="java-20_java-base_java-lang-ThreadDeath-header">
+                          <a class="btn btn-link" href="java.base/java/lang/ThreadDeath.html" rel="external">
+                            ThreadDeath
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default java-package" id="java-20_java-base_java-net-panel" data-filter-value="java.net">
+                  <div class="panel-heading" id="java-20_java-base_java-net-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-base_java-net-content" aria-controls="java-20_java-base_java-net-content">
+                      java.net
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-20_java-base_java-net-content" aria-labelledby="java-20_java-base_java-net-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-20_java-base_java-net-URL-panel" data-filter-value="java.net.URL">
+                        <div class="panel-heading" id="java-20_java-base_java-net-URL-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-base_java-net-URL-content" aria-controls="java-20_java-base_java-net-URL-content">
+                            URL
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-20_java-base_java-net-URL-content" aria-labelledby="java-20_java-base_java-net-URL-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.lang.String)" rel="external">
+                                    URL(java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.lang.String,java.lang.String,int,java.lang.String)" rel="external">
+                                    URL(java.lang.String,java.lang.String,int,java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.lang.String,java.lang.String,int,java.lang.String,java.net.URLStreamHandler)" rel="external">
+                                    URL(java.lang.String,java.lang.String,int,java.lang.String,java.net.URLStreamHandler)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.lang.String,java.lang.String,java.lang.String)" rel="external">
+                                    URL(java.lang.String,java.lang.String,java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.net.URL,java.lang.String)" rel="external">
+                                    URL(java.net.URL,java.lang.String)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/net/URL.html#&lt;init&gt;(java.net.URL,java.lang.String,java.net.URLStreamHandler)" rel="external">
+                                    URL(java.net.URL,java.lang.String,java.net.URLStreamHandler)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-20_java-management-panel" data-filter-value="java.management">
+            <div class="panel-heading" id="java-20_java-management-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-management-content" aria-controls="java-20_java-management-content">
+                java.management
+              </a>
+            </div>
+            <div class="collapse" id="java-20_java-management-content" aria-labelledby="java-20_java-management-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-20_java-management_javax-management-loading-panel" data-filter-value="javax.management.loading">
+                  <div class="panel-heading" id="java-20_java-management_javax-management-loading-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20_java-management_javax-management-loading-content" aria-controls="java-20_java-management_javax-management-loading-content">
+                      javax.management.loading
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-20_java-management_javax-management-loading-content" aria-labelledby="java-20_java-management_javax-management-loading-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-20_java-management_javax-management-loading-MLet-panel" data-filter-value="javax.management.loading.MLet">
+                        <div class="panel-heading" id="java-20_java-management_javax-management-loading-MLet-header">
+                          <a class="btn btn-link" href="java.management/javax/management/loading/MLet.html" rel="external">
+                            MLet
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-20_java-management_javax-management-loading-MLetContent-panel" data-filter-value="javax.management.loading.MLetContent">
+                        <div class="panel-heading" id="java-20_java-management_javax-management-loading-MLetContent-header">
+                          <a class="btn btn-link" href="java.management/javax/management/loading/MLetContent.html" rel="external">
+                            MLetContent
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-20_java-management_javax-management-loading-MLetMBean-panel" data-filter-value="javax.management.loading.MLetMBean">
+                        <div class="panel-heading" id="java-20_java-management_javax-management-loading-MLetMBean-header">
+                          <a class="btn btn-link" href="java.management/javax/management/loading/MLetMBean.html" rel="external">
+                            MLetMBean
+                          </a>
+                        </div>
+                      </div>
+                      <div class="panel panel-default java-class" id="java-20_java-management_javax-management-loading-PrivateMLet-panel" data-filter-value="javax.management.loading.PrivateMLet">
+                        <div class="panel-heading" id="java-20_java-management_javax-management-loading-PrivateMLet-header">
+                          <a class="btn btn-link" href="java.management/javax/management/loading/PrivateMLet.html" rel="external">
+                            PrivateMLet
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-19-panel">
       <div class="panel-heading" id="java-19-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-19-content" aria-controls="java-19-content">
